# generic-channel

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  receiver.rs  sender.rs
src/receiver/: crossbeam.rs  standard.rs
src/sender/: crossbeam.rs  futures.rs  standard.rs
